--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 * * * *"   # every hour UTC
   workflow_dispatch:       # allow manual run button
 
+permissions:
+  contents: write   # <-- this line gives the job permission to push commits
+
 jobs:
   capture:
     runs-on: ubuntu-latest
@@ -14,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: true
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -34,4 +38,4 @@ jobs:
 
       - name: Push committed PDF(s)
         run: |
-          git push
+          git push origin HEAD:main
