--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -3,10 +3,10 @@ name: Hourly buoy capture
 on:
   schedule:
     - cron: "0 * * * *"   # every hour UTC
-  workflow_dispatch:       # allow manual run button
+  workflow_dispatch:
 
 permissions:
-  contents: write  # allow this workflow to push commits back
+  contents: write
 
 jobs:
   capture:
@@ -27,7 +27,31 @@ jobs:
       - name: Install system libs and Python deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y libnss3 libxss1 libasound2 libxshmfence1 libgbm-dev
+          # These are the deps Playwright/Chromium needs on Ubuntu 24.04 runners
+          sudo apt-get install -y \
+            libnss3 \
+            libxss1 \
+            libxshmfence1 \
+            libgbm-dev \
+            libasound2t64 \
+            fonts-liberation \
+            libatk1.0-0 \
+            libatk-bridge2.0-0 \
+            libcups2 \
+            libdrm2 \
+            libxkbcommon0 \
+            libpango-1.0-0 \
+            libcairo2 \
+            libglib2.0-0 \
+            libgtk-3-0 \
+            libx11-xcb1 \
+            libxcb-dri3-0 \
+            libxdamage1 \
+            libxfixes3 \
+            libxrandr2 \
+            libdbus-1-3 \
+            libwayland-client0 \
+            libwayland-server0
           python -m pip install --upgrade pip
           pip install playwright pytz
           playwright install chromium
@@ -40,8 +64,7 @@ jobs:
         run: |
           git config user.email "buoy-bot@example.com"
           git config user.name "buoy-bot"
-          git add captures/*.pdf
-          # only commit if there is something new
+          git add captures/*.pdf || true
           if git diff --cached --quiet; then
             echo "No new PDF to commit."
           else
@@ -50,4 +73,9 @@ jobs:
 
       - name: Push to main
         run: |
-          git push origin HEAD:main
+          # Only push if we actually committed something
+          if git log -1 --pretty=%B | grep -q "Add buoy snapshot"; then
+            git push origin HEAD:main
+          else
+            echo "Nothing new to push."
+          fi
