--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write  # allow this workflow to push commits back to the repo
+  contents: write
 
 jobs:
   capture:
@@ -27,13 +27,12 @@ jobs:
       - name: Install system libs and Python deps
         run: |
           sudo apt-get update
-          # IMPORTANT: this list does NOT include 'libasound2'
+          # ✅ Removed libasound2/libasound2t64 completely
           sudo apt-get install -y \
             libnss3 \
             libxss1 \
             libxshmfence1 \
             libgbm-dev \
-            libasound2t64 \
             fonts-liberation \
             libatk1.0-0 \
             libatk-bridge2.0-0 \
@@ -57,8 +56,7 @@ jobs:
           playwright install chromium
 
       - name: Run capture script (make new PDF)
-        run: |
-          python hourly_buoy_screenshot.py
+        run: python hourly_buoy_screenshot.py
 
       - name: Commit PDF(s) if there are changes
         run: |
