--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: write  # allow commits to repo
 
 jobs:
   capture:
@@ -27,7 +27,6 @@ jobs:
       - name: Install system libs and Python deps
         run: |
           sudo apt-get update
-          # ✅ Removed libasound2/libasound2t64 completely
           sudo apt-get install -y \
             libnss3 \
             libxss1 \
@@ -76,3 +75,51 @@ jobs:
           else
             echo "Nothing new to push."
           fi
+
+      - name: Upload to Google Drive
+        env:
+          GOOGLE_CREDS: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
+          DRIVE_FOLDER_ID: "1AbCdEfGhIjKLmnop"  # ← replace with your real Drive folder ID
+        run: |
+          python -m pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+          echo "$GOOGLE_CREDS" > creds.json
+          python <<'EOF'
+import os
+from google.oauth2 import service_account
+from googleapiclient.discovery import build
+from googleapiclient.http import MediaFileUpload
+
+# Authenticate using the service account
+creds = service_account.Credentials.from_service_account_file(
+    "creds.json",
+    scopes=["https://www.googleapis.com/auth/drive.file"]
+)
+service = build("drive", "v3", credentials=creds)
+
+# Find newest PDF in captures/
+captures_dir = "captures"
+pdfs = [
+    os.path.join(captures_dir, f)
+    for f in os.listdir(captures_dir)
+    if f.endswith(".pdf")
+]
+if not pdfs:
+    print("❌ No PDF found to upload.")
+    raise SystemExit(0)
+
+latest_pdf = max(pdfs, key=os.path.getmtime)
+print(f"Uploading {latest_pdf} to Google Drive...")
+
+file_metadata = {
+    "name": os.path.basename(latest_pdf),
+    "parents": [os.environ["DRIVE_FOLDER_ID"]],
+}
+media = MediaFileUpload(latest_pdf, mimetype="application/pdf")
+uploaded = service.files().create(
+    body=file_metadata,
+    media_body=media,
+    fields="id, name"
+).execute()
+
+print(f"✅ Uploaded {uploaded['name']} with file ID {uploaded['id']}")
+EOF
