--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -51,7 +51,7 @@ jobs:
             libwayland-client0 \
             libwayland-server0
           python -m pip install --upgrade pip
-          pip install playwright pytz
+          pip install playwright pytz google-api-python-client google-auth-httplib2 google-auth-oauthlib
           playwright install chromium
 
       - name: Run capture script (make new PDF)
@@ -79,46 +79,50 @@ jobs:
       - name: Upload to Google Drive
         env:
           GOOGLE_CREDS: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-          DRIVE_FOLDER_ID: "1AbCdEfGhIjKLmnop"  # ← replace with your real Drive folder ID
+          DRIVE_FOLDER_ID: "1AbCdEfGhIjKLmnop"  # <-- REPLACE THIS
         run: |
-          python -m pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
           echo "$GOOGLE_CREDS" > creds.json
+
           python <<'EOF'
 import os
 from google.oauth2 import service_account
 from googleapiclient.discovery import build
 from googleapiclient.http import MediaFileUpload
 
-# Authenticate using the service account
+# Read folder ID from env
+drive_folder_id = os.environ["DRIVE_FOLDER_ID"]
+
+# Authenticate using the service account creds we wrote to creds.json
 creds = service_account.Credentials.from_service_account_file(
     "creds.json",
     scopes=["https://www.googleapis.com/auth/drive.file"]
 )
 service = build("drive", "v3", credentials=creds)
 
-# Find newest PDF in captures/
+# Find newest .pdf in captures/
 captures_dir = "captures"
 pdfs = [
     os.path.join(captures_dir, f)
     for f in os.listdir(captures_dir)
     if f.endswith(".pdf")
 ]
+
 if not pdfs:
-    print("❌ No PDF found to upload.")
+    print("❌ No PDF found, nothing to upload.")
     raise SystemExit(0)
 
 latest_pdf = max(pdfs, key=os.path.getmtime)
-print(f"Uploading {latest_pdf} to Google Drive...")
+print(f"[INFO] Uploading {latest_pdf} to Google Drive folder {drive_folder_id}")
 
 file_metadata = {
     "name": os.path.basename(latest_pdf),
-    "parents": [os.environ["DRIVE_FOLDER_ID"]],
+    "parents": [drive_folder_id],
 }
 media = MediaFileUpload(latest_pdf, mimetype="application/pdf")
 uploaded = service.files().create(
     body=file_metadata,
     media_body=media,
-    fields="id, name"
+    fields="id,name"
 ).execute()
 
 print(f"✅ Uploaded {uploaded['name']} with file ID {uploaded['id']}")
