--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install system libs and Python deps
         run: |
           sudo apt-get update
-          # ✅ Removed libasound2/libasound2t64 completely
+          # Install required system libraries for Chromium
           sudo apt-get install -y \
             libnss3 \
             libxss1 \
@@ -56,7 +56,7 @@ jobs:
           playwright install chromium
 
       - name: Run capture script (make new PDF)
-        run: python hourly_buoy_screenshot.py
+        run: python capture_buoy.py
 
       - name: Commit PDF(s) if there are changes
         run: |
