--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           persist-credentials: true
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0   # <-- allow pull/rebase
+          fetch-depth: 0      # <-- needed to pull/rebase
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -29,28 +29,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            libnss3 \
-            libxss1 \
-            libxshmfence1 \
-            libgbm-dev \
-            fonts-liberation \
-            libatk1.0-0 \
-            libatk-bridge2.0-0 \
-            libcups2 \
-            libdrm2 \
-            libxkbcommon0 \
-            libpango-1.0-0 \
-            libcairo2 \
-            libglib2.0-0 \
-            libgtk-3-0 \
-            libx11-xcb1 \
-            libxcb-dri3-0 \
-            libxdamage1 \
-            libxfixes3 \
-            libxrandr2 \
-            libdbus-1-3 \
-            libwayland-client0 \
-            libwayland-server0
+            libnss3 libxss1 libxshmfence1 libgbm-dev fonts-liberation \
+            libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 \
+            libpango-1.0-0 libcairo2 libglib2.0-0 libgtk-3-0 libx11-xcb1 \
+            libxcb-dri3-0 libxdamage1 libxfixes3 libxrandr2 libdbus-1-3 \
+            libwayland-client0 libwayland-server0
           python -m pip install --upgrade pip
           pip install playwright pytz
           playwright install chromium
@@ -63,25 +46,34 @@ jobs:
           git config user.email "buoy-bot@example.com"
           git config user.name "buoy-bot"
 
-      - name: Stage PDFs
+      - name: Stage & commit PDFs if changed
+        id: commit_step
         run: |
           mkdir -p captures
-          git add captures/*.pdf || true
+          git add captures/*.pdf 2>/dev/null || true
           if git diff --cached --quiet; then
+            echo "nothing_to_commit=true" >> $GITHUB_OUTPUT
             echo "No new PDF to commit."
-            echo "SHOULD_COMMIT=false" >> $GITHUB_ENV
           else
             git commit -m "Add buoy snapshot"
-            echo "SHOULD_COMMIT=true" >> $GITHUB_ENV
+            echo "nothing_to_commit=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Pull latest (rebase) to avoid non-fast-forward
-        if: env.SHOULD_COMMIT == 'true'
+        if: steps.commit_step.outputs.nothing_to_commit == 'false'
         run: |
           git fetch origin main
           git pull --rebase origin main
 
       - name: Push to main
-        if: env.SHOULD_COMMIT == 'true'
-        run: |
-          git push origin HEAD:main
+        if: steps.commit_step.outputs.nothing_to_commit == 'false'
+        run: git push origin HEAD:main
+
+      # Optional: always upload the PDFs as an artifact so the job never fails if push is blocked
+      - name: Upload artifact (download from run page)
+        uses: actions/upload-artifact@v4
+        with:
+          name: buoy-captures
+          path: captures/*.pdf
+          if-no-files-found: warn
+          retention-days: 14
